# MameVfxRemoteView

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE.html  LICENSE.md  View.html  View.js  main.cpp  run.sh
build_view/: README.md  Touch events:.md  View.js  ViewCode.js  build_view.py  colors.py  compare_segments.py  eps_vfd.py  geom.py  js_html.py  keyboard.py  keys.py  led14seg.py  make_artwork.sh  make_layouts.sh  make_view.sh  mame_layout.py  mame_layout_script.lua  mysvg.py  myxml.py  rect.py  render.py  render_harfbuzz.py  render_pango.py  renderutil.py  straight_segments.py  util.py  vfd.py  view.py  view_builders.py  viewvisitor.py
webroot/: View.html  View.js
